# ha-autopi

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: database.db  database.py  env.example  main.py  models.py
